--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "next": "16.1.6",
+    "prisma": "^6.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
